# my_ml_project

./: README.md  predict.py  pyproject.toml  requirements.txt  train.py
models/: best_params.pkl  preprocessor.pkl
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: train_model.py  tune_model.py
src/visualization/: visualize.py
